Major refactor of java trace utilities for improved performance
Former-commit-id: ef5793ea1bce52e164025d3f1f0a67545a49a4e3